--- a/03/diy-age.html
+++ b/03/diy-age.html
@@ -10,5 +10,14 @@
 <body>	
 	<button class="btn" onclick="calc()">나이 계산하기</button>
 	<div id="result" class="show">(결과 값 표시)</div> 
+	<script>
+	function calc(){
+		var birth = prompt("올해 연도를 입력하세요.", "YYYY");
+		var year = prompt("태어난 연도를 입력하세요.", "YYYY");
+		var age = birth - year + 1;
+		document.querySelector("#result").innerHTML = "당신은 올해 " + age + "살입니다.";
+		alert("당신은 올해 " + age + "살입니다.");
+	}
+	</script>
 </body>
 </html>
