--- a/03/diy-bargain.html
+++ b/03/diy-bargain.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,38 @@
 	<title>할인 가격 구하기</title>
 	<link rel="stylesheet" href="css/bargain.css">
 </head>
-<body>	
+
+<body>
 	<div id="contents">
 		<img src="images/sale.png">
 		<ul>
 			<li>
-					<label for="oPrice">원래 가격</label> 
-					<input type="text" id="oPrice">원
+				<label for="oPrice">원래 가격</label>
+				<input type="text" id="oPrice">원
 			</li>
 			<li>
 				<label for="rate">할인율</label>
 				<input type="text" id="rate">%
 			</li>
 			<li>
-					<button onclick="showPrice()">할인 가격 계산하기</button>
+				<button onclick="showPrice()">할인 가격 계산하기</button>
 			</li>
 		</ul>
-		<div id="showResult"></div>	
-	</div>	
+		<div id="showResult"></div>
+	</div>
+	<script>
+		function showPrice() {
+			var originPrice = document.querySelector("#oPrice").value;
+			var rate = document.querySelector("#rate").value;
+			if(!originPrice > 0 && rate > 0){
+				var savedPrice = originPrice * (rate/100);
+				var resultPrice = originPrice - savedPrice;
+				document.querySelector("#showResult").innerHTML = "원래 가격은 " + originPrice + "원이고 할인율은 " + rate + "%입니다. 할인된 가격은 " + savedPrice + "원이고 최종 가격은 " + resultPrice + "원입니다.";
+			}else{
+				document.querySelector("#showResult").innerHTML = "값을 모두 입력해주세요."
+			}
+		}
+	</script>
 </body>
+
 </html>
