--- a/04/quiz-1.html
+++ b/04/quiz-1.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>짝수일까, 홀수일까</title>
 </head>
+
 <body>
 	<h2>짝수일까, 홀수일까</h2>
 
+
 	<script>
-	
+		var number = prompt("숫자를 입력하시오.");
+		if (number != null) {
+			if (number % 2 == 0) {
+				document.write(number + "은 짝수입니다.");
+			} else {
+				document.write(number + "은 홀수입니다.");
+			}
+		}else{
+			alert("잘못 입력하였습니다.");
+		}
+
 	</script>
 </body>
+
 </html>
