--- a/05/event-dom.html
+++ b/05/event-dom.html
@@ -11,6 +11,6 @@
 	<div id="item">
 		<img src="images/flower1.jpg" alt="" id="cover">
 	</div>	
-	
+	<script src = "/05/js/event-dom.js"></script>
 </body>
 </html>  
